--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -23,3 +23,7 @@
 [[constraint]]
   name = "github.com/pkg/errors"
   version = "v0.8.0"
+
+[[projects]]
+  name = "github.com/blang/semver"
+  version = "v3.5.0"
