added RemoveAll command

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,7 +13,8 @@
         "incr",
         "kvpairs",
         "getorcreate",
-        "along"
+        "along",
+        "rmvall"
     ],
     "go.lintOnSave": "workspace",
     "go.vetOnSave": "workspace",
